hamburger menu overflow fixed

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html {
 	background-color: black;
 	left: 0;
 	top: 0;
-	padding: 1rem 5rem;
+	padding: 1rem 2rem;
 	width: 100%;
 	display: flex;
 	align-items: center;
@@ -71,6 +71,7 @@ html {
 	background-color: transparent;
 }
 .nav-bar .nav-list .hamburger .bar {
+	
 	height: 2px;
 	width: 30px;
 	background-color: white;
@@ -149,6 +150,7 @@ html {
 	flex-direction: column-reverse;
 	justify-content: center;
 	align-items: center;
+	
 }
 .profile .profile-info {
 	width: 100%;
@@ -180,7 +182,6 @@ html {
 	padding-top: 5em;
 	height: auto;
 	width: 80%;
-	margin-bottom: 3rem;
 }
 .profile .profile-img img {
 	height: 100%;
@@ -691,9 +692,19 @@ input[type=text], textarea,  input[type=email] ,input[type=number]{
 @media only screen and (min-width: 1200px) {
 	.profile .profile-info .profile-info-heading {
 		font-size: 6rem;
+
 	}
 	.profile .profile-info .profile-info-subheading {
 		letter-spacing: .8rem;
+	}
+	.profile{
+		padding-top: 13em;
+		padding-bottom: 10em;
+	}
+
+	.profile-img{
+		padding-left: 10em;
+
 	}
 }
 /* End Media Query For Desktop Only  */
